fix overflow

--- a/source/main.css
+++ b/source/main.css
@@ -141,7 +141,7 @@ hr {
   top: 0;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
+  overflow-y: auto !important; /* Enable scroll if needed */
   background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
@@ -151,7 +151,7 @@ hr {
   background-color: #fefefe;
   font-size: 1.5rem;
   font-family: "Poppins", sans-serif;
-
+  overflow:auto;
   margin: auto;
   padding: 20px;
   border: 1px solid #888;
